# dismech-warp

./: README.md  der copy.ipynb  der.ipynb  der.md  example_cable.py  pyproject.toml  save.py
src/dismech_warp/: __init__.py  der.py  strain.py  util.py  utils.py
src/dismech_warp/strains/: epsilon.py  kappa.py  tau.py
tests/: conftest.py  test_der.py  test_util.py  test_utils.py
